@startuml est_usuario_web

' ============================================================
' Estilo claro estandar — fondo blanco, fuente y lineas negras,
' rellenos pastel suaves. NO MODO OSCURO.
' Inyectado por docs/diagramas/plantuml/_normalizar_estilo_claro.py
' ============================================================
skinparam backgroundColor #FFFFFF
skinparam defaultFontColor #000000
skinparam defaultFontName "Helvetica"
skinparam defaultFontSize 12
skinparam shadowing false
skinparam roundCorner 6
skinparam ArrowColor #000000
skinparam ArrowFontColor #000000

' Notas: amarillo palido, texto negro, borde naranja oscuro.
skinparam noteBackgroundColor #FFF9CC
skinparam noteBorderColor #B5852E
skinparam noteFontColor #000000

' Titulos
skinparam titleFontColor #1F4E79
skinparam titleFontSize 14
skinparam titleFontStyle bold

' Divisores y headers
skinparam dividerBackgroundColor #F2F2F2
skinparam dividerFontColor #000000

' ─── Secuencia ───────────────────────────
skinparam sequence {
  ActorBackgroundColor #DAE8FC
  ActorBorderColor #000000
  ActorFontColor #000000
  ParticipantBackgroundColor #FFF2CC
  ParticipantBorderColor #000000
  ParticipantFontColor #000000
  LifeLineBorderColor #000000
  LifeLineBackgroundColor #FFFFFF
  ArrowColor #000000
  ArrowFontColor #000000
  GroupBackgroundColor #F2F2F2
  GroupHeaderFontColor #000000
  GroupBorderColor #000000
  ReferenceBackgroundColor #FFF9CC
  ReferenceBorderColor #B5852E
  ReferenceFontColor #000000
  DividerBackgroundColor #F2F2F2
  DividerFontColor #000000
}
skinparam activationBackgroundColor #FFF2CC
skinparam activationBorderColor #000000
skinparam databaseBackgroundColor #E1D5E7
skinparam databaseBorderColor #000000
skinparam databaseFontColor #000000

' ─── Actividad ───────────────────────────
skinparam activity {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  StartColor #000000
  EndColor #000000
  DiamondBackgroundColor #DAE8FC
  DiamondBorderColor #000000
  DiamondFontColor #000000
}
skinparam activityArrowColor #000000

' ─── Estados ─────────────────────────────
skinparam state {
  BackgroundColor #DAE8FC
  BorderColor #000000
  FontColor #000000
  ArrowColor #000000
  StartColor #000000
  EndColor #000000
}

' ─── Casos de uso ────────────────────────
skinparam usecase {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
}
skinparam actor {
  BackgroundColor #DAE8FC
  BorderColor #000000
  FontColor #000000
}

' ─── Clases ──────────────────────────────
skinparam class {
  BackgroundColor #FFF2CC
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #595959
}
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FFF2CC
skinparam classBorderColor #000000

' ─── Componentes / paquetes ──────────────
skinparam component {
  BackgroundColor #D5E8D4
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
}
skinparam package {
  BackgroundColor #F2F2F2
  BorderColor #000000
  FontColor #000000
}
skinparam node {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}
skinparam cloud {
  BackgroundColor #E1D5E7
  BorderColor #000000
  FontColor #000000
}

' ─── ER ──────────────────────────────────
skinparam entity {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}

' ─── Rectangulos genericos ──────────────
skinparam rectangle {
  BackgroundColor #F8F8F8
  BorderColor #000000
  FontColor #000000
}

' ─── Interfaces ──────────────────────────
skinparam interface {
  BackgroundColor #FFF2CC
  BorderColor #000000
  FontColor #000000
}

' ============================================================
' Diagrama de estados — EstadoUsuarioApp (usuarios web)
' Ruta: docs/diagramas/plantuml/06_estado_usuario_app.puml
' ============================================================

title Ciclo de vida de UsuarioApp\n(enum EstadoUsuarioApp)

[*] --> pendiente_acceso : Usuario introduce nickname\npor primera vez en /nick\nSe crea UsuarioApp automáticamente

pendiente_acceso --> habilitado : Admin concede acceso\n(PUT /api/v1/admin/usuarios/{id}/habilitar)\ny asigna cuota de tokens inicial

habilitado --> pendiente_ampliar_tokens : Usuario agota su cuota\n(tokens_disponibles <= 0)\nSe bloquea el botón "Ejecutar"

pendiente_ampliar_tokens --> habilitado : Admin amplía cuota\n(PUT /api/v1/admin/usuarios/{id}/tokens)\ntokens_disponibles += cantidad

pendiente_acceso --> [*] : Admin elimina usuario\n(DELETE /api/v1/admin/usuarios/{id})
habilitado --> [*] : Admin elimina usuario
pendiente_ampliar_tokens --> [*] : Admin elimina usuario

note right of pendiente_acceso
  Estado inicial al crear la cuenta.
  El usuario ve un mensaje informativo
  en NickPage: "Tu cuenta está pendiente
  de activación por el administrador".
  No puede acceder al benchmark.
end note

note right of habilitado
  El usuario puede ejecutar benchmarks.
  Cada ejecución consume tokens:
    tokens_consumidos += output_tokens
    tokens_disponibles -= output_tokens
  El frontend actualiza el contador
  visible en la cabecera de la página.
end note

note right of pendiente_ampliar_tokens
  Estado intermedio de bloqueo suave.
  El usuario ve su cuota en 0 y un
  mensaje de "Solicita más tokens
  al administrador".
  Las evaluaciones existentes siguen
  siendo visibles en historial y dashboard.
end note

@enduml
